# SOGA

./: .gitignore  ACTUALIZACION_GEOMETRIA_2D.md  AUDITORIA_MATEMATICA.md  CONTRIBUTING.md  CORRECCION_RUTAS.md  DASHBOARD_INSTALADO.md  EJEMPLO_VISUAL_GEOMETRIA.txt  ESTADISTICAS_DASHBOARD.txt  INDICE_DOCUMENTACION_DASHBOARD.md  LICENSE  MANIFEST.in  PRE_GIT_CHECKLIST.md  QUICK_START_DASHBOARD.md  README.md  REORGANIZACION.md  RESUMEN_DASHBOARD.md  TRADE-OFFS.md  config.toml  pyproject.toml  requirements.txt  run_dashboard.bat  run_dashboard.py  run_dashboard.sh  test_end_to_end.py  test_pareto_front.py
docs/: AUDITORIA_COMPLETA_2025.md  AUDITORIA_PROYECTO.md  BEST_PRACTICES.md  COMPONENT_GUIDE.md  LIMPIEZA_ARCHIVOS_BASURA.md  MEJORAS_IMPLEMENTADAS.md  PROJECT_STRUCTURE.md  README.md  REPORTE_AUDITORIA_FINAL.md  REPORTE_FINAL_VERIFICACION.md  soga-architecture-guide.md
examples/: advanced_optimization.py  basic_optimization.py
scripts/audit/: auditoria_fase2_physics.py  auditoria_fase3_models.py  auditoria_fase4_optimization.py
src/soga/app/: facade.py
src/soga/core/: models.py  optimization.py  physics.py
src/soga/infrastructure/: config.py  file_io.py
streamlit_app/: README.md  SOGA_Dashboard.py  requirements.txt
streamlit_app/.streamlit/: config.toml
streamlit_app/pages/: 1_🚀_Nueva_Optimización.py  2_📚_Análisis_de_Sesiones.py  3_ℹ️_Acerca_del_Proyecto.py
tests/app/: test_facade.py
tests/core/: test_models.py  test_optimization.py  test_physics.py
tests/infrastructure/: __init__.py  test_config.py  test_file_io.py
