[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soga"
version = "0.0.1"
description = "Software de Optimización Geométrica de Antenas (SOGA)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    {name = "Johan Stiven Avila Garcia", email = "jstivenavilag42@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pymoo",
    "matplotlib",
    # tomllib is built-in for Python 3.11+
    # tomli is only needed if we want to support Python < 3.11
    # "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pymoo.*",
    "ignore::DeprecationWarning:numpy.*",
]

[tool.coverage.run]
source = ["src"]